# oxigate

./: .gitignore  Cargo.toml  LICENSE  Makefile  auth.yaml  clients.yaml  gateway.yaml  routes.yaml
example/: .env.example  Makefile  README.md  docker-compose.yml  gen-certs.sh
example/backend/: package.json  server.js
example/cdn-service/: Dockerfile  package-lock.json  package.json  server.js
example/cdn-service/public/: app.js  styles.css
example/cdn-service/views/: 404.hbs  index.hbs
example/cdn-service/views/layouts/: main.hbs
example/cdn-service/views/partials/: flash.hbs
example/cdn-service/views/protected/: dashboard.hbs  profile.hbs
example/gateway/: Dockerfile  auth.yaml  clients.yaml  gateway.yaml  routes.yaml
oxigate/: Cargo.toml
oxigate-app/: Cargo.toml
oxigate-app/src/: configuration.rs  main.rs
oxigate/src/: lib.rs
oxigate/src/config/: auth.rs  client.rs  interpolation.rs  mod.rs  route.rs
oxigate/src/handler/: proxy_handler.rs
