[package]
name = "oxigate-app"
version = "0.1.0"
edition = "2024"
authors = ["Andrea Chiumenti <achiumenti@red.software.systems>"]
license = "MIT"
description = "OIDC-aware reverse proxy / API gateway built on Axum"
homepage = "https://github.com/RedSoftwareSystems/oxigate"
repository = "https://github.com/RedSoftwareSystems/oxigate"

[[bin]]
name = "oxigate"
path = "src/main.rs"

[dependencies]
oxigate = { path = "../oxigate" }
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
axum-oidc-client = { git = "https://github.com/RedSoftwareSystems/axum-oidc-client", branch = "9-callback-redirect", features = [
    "authentication",
    "jwt",
    "moka-cache",
    "reqwest-native-tls",
] }
axum-server = { version = "0.7", features = ["tls-openssl"] }
openssl = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
