[package]
name = "oxigate"
version = "0.1.0"
edition = "2024"
authors = ["Andrea Chiumenti <achiumenti@red.software.systems>"]
license = "MIT"
description = "Core library for the Oxigate OIDC-aware reverse proxy / API gateway built on Axum"
documentation = "https://docs.rs/oxigate"
homepage = "https://github.com/RedSoftwareSystems/oxigate"
repository = "https://github.com/RedSoftwareSystems/oxigate"

[dependencies]
axum = { version = "0.8", features = ["form", "http1", "http2", "json", "macros", "matched-path", "multipart", "original-uri", "query", "tokio", "tower-log", "tracing", "ws"] }
axum-oidc-client = { git = "https://github.com/RedSoftwareSystems/axum-oidc-client", branch = "9-callback-redirect", features = [
    "authentication",
    "jwt",
    "moka-cache",
    "redis",
    "redis-native-tls",
    "sql-cache-all",
    "reqwest-native-tls",
] }
serde = { version = "1", features = ["derive"] }

serde_yaml = "0.9"
regex-automata = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "stream"] }
tokio = { version = "1", features = ["full"] }
